...
                        .aspectRatio(contentMode: .fit)
                        .frame(width: 25, height: 25)
                        .foregroundColor(Color("Dark Pink"))
                    Text("4.8")
                    Text("(12 Reviews)")
                    Text("|")
                    Image(systemName: "dollarsign.circle")
                        .foregroundColor(Color("Dark Pink"))
                    Text("@gigi-hadid")
                }
                .frame(maxWidth: .infinity)
                
                ToggleView()
...

struct ViewProfileHeader: View {
    var body: some View {
        HStack {
            Spacer().frame(maxWidth: .infinity)
            VStack(alignment: .center) {
                Image("logo")
                    .resizable()
                    .aspectRatio(contentMode: .fit)
                    .frame(width: 150)
            }
            .frame(maxWidth: .infinity)
            VStack(alignment: .trailing) {
...
