...
        if (showSustainabilityMessage) {
            ZStack {
                Color.black.opacity(0.35).edgesIgnoringSafeArea(.all)
                let randomInt = Int.random(in: 0..<5)
                VStack(alignment: .center, spacing: 0) {
                    HStack {
                        Text("Thanks for your purchase!")
                        Image(systemName: "globe.americas.fill")
                            .resizable()
                            .aspectRatio(contentMode: .fit)
                            .frame(width: 25)
                    }.frame(maxWidth: .infinity)
                        .frame(height: 50, alignment: .center)
...
                    Button(action: {
                        withAnimation(.linear(duration: 0.2)){
                            showSustainabilityMessage = false
                            showBidView = false
                        }
                    }, label: {
                        Text("OK")
                            .frame(maxWidth: .infinity)
                            .frame(height: 60, alignment: .center)
                            .font(Font.system(size: 24, weight: .bold))
                            .foregroundColor(.white)
                            .background(Color.black.opacity(0.15))
                    })
...
