...
    @EnvironmentObject private var itemVM: ItemVM
    @Environment(\.presentationMode) var presentationMode
    
    var body: some View {
        ZStack {
            VStack(alignment: .center){
                Text("Make an offer")
                    .fontWeight(.semibold)
                    .font(.system(size: 45))
                    .padding(EdgeInsets(top: 0, leading: 0, bottom: 0, trailing: 0))
                Text(String(format: "Listed price: $%.2f", itemVM.item.price))
                    .fontWeight(.semibold)
                    .font(.system(size: 20))
...
                    Button(action: {
                        bidsVM.placeBid(item: itemVM.item, offer: offer)
                        if (!bidsVM.isError) {
                            showSustainabilityMessage = true
                        }
                    }) {
                        Text("Send Bid Offer")
                            .frame(minWidth: 0, maxWidth: .infinity)
                            .font(.system(size: 18))
                            .padding()
                            .foregroundColor(.white)
                            .overlay (
                                RoundedRectangle(cornerRadius: 25)
...
