...
                    if !itemVM.isSeller && !itemVM.isBidder {
                        Button(action: {
                            showBidView = true
                            presentationMode.wrappedValue.dismiss()
                            tabSelection = 2
                        }){
                            Text("Place Bid")
                                .frame(maxWidth: maxWidth*0.3, alignment: .center)
                        }
                        .padding(10)
                        .background(Styles().themePink)
                        .cornerRadius(10)
                        .foregroundColor(.white)
                    }
                    else if itemVM.isBidder {
                        Button(action: {
                            itemVM.removeBid()
                            presentationMode.wrappedValue.dismiss()
                        }){
                            Text("Remove Bid")
                                .frame(maxWidth: maxWidth*0.3, alignment: .center)
                        }
                        .padding(10)
                        .background(Styles().themePink)
                        .cornerRadius(10)
                        .foregroundColor(.white)
...
